# TimeStampExtractor

./: .gitignore  Pic_Date_Filter.py  README.md  pyproject.toml
examples/: README.md
old/: Crop.py  README.md  googleOCR.py
src/timestamp_extractor/: __init__.py  cli.py  date_parser.py  exif_writer.py  ocr.py  pipeline.py  preprocessing.py  region_detector.py
tests/: test_date_parser.py  test_region_spec.py
